--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ PA2_cache/html/__packages
 PA2_files/figure-html/unnamed-chunk-4-1.png
 PA2_files/figure-html/unnamed-chunk-6-1.png
 PA2_files/figure-html/unnamed-chunk-5-1.png
+*.rdb
