--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ PA2_files/figure-html/unnamed-chunk-4-1.png
 PA2_files/figure-html/unnamed-chunk-6-1.png
 PA2_files/figure-html/unnamed-chunk-5-1.png
 *.rdb
+PA2_files/figure-html/unnamed-chunk-10-1.png
+PA2_files/figure-html/unnamed-chunk-8-1.png
+rsconnect/documents/PA2.Rmd/rpubs.com/rpubs/Document.dcf
+PA2_files/figure-html/unnamed-chunk-7-1.png
